--- a/Src/HackPleasanterApi.Client.Api/HackPleasanterApi.Client.Api.csproj
+++ b/Src/HackPleasanterApi.Client.Api/HackPleasanterApi.Client.Api.csproj
@@ -7,6 +7,35 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="MimeTypes" Version="2.2.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Request\View\" />
+    <None Remove="Request\View\FindKey\" />
+    <None Remove="Helper\" />
+    <None Remove="Helper\Expansions\" />
+    <None Remove="Helper\Models\" />
+    <None Remove="Helper\Models\ItemModel\" />
+    <None Remove="Helper\Models\ItemModel\Hash\" />
+    <None Remove="MimeTypes" />
+    <None Remove="Logging\" />
+    <None Remove="Definition\" />
+    <None Remove="Exception\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Request\View\" />
+    <Folder Include="Request\View\FilterKey\" />
+    <Folder Include="Helper\" />
+    <Folder Include="Helper\Expansions\" />
+    <Folder Include="Helper\Models\" />
+    <Folder Include="Helper\Models\ItemModel\" />
+    <Folder Include="Helper\Models\ItemModel\Hash\" />
+    <Folder Include="Logging\" />
+    <Folder Include="Definition\" />
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
 </Project>
