ロガーの設定間違えを修正

--- a/Src/HackPleasanterApi.Client.Api/HackPleasanterApi.Client.Api.csproj
+++ b/Src/HackPleasanterApi.Client.Api/HackPleasanterApi.Client.Api.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Authors>yamada28gp</Authors>
+    <Authors>yamada28go</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/yamada28go/HackPleasanterApi.Csharp/</PackageProjectUrl>
-    <PackageVersion>0.0.1</PackageVersion>
+    <PackageVersion>0.0.3</PackageVersion>
     <PackageId>HackPleasanterApi.Csharp</PackageId>
     <PackageLicenseUrl>https://github.com/yamada28go/HackPleasanterApi.Csharp/blob/main/LICENSE</PackageLicenseUrl>
     <Owners>yamada28go</Owners>
