--- a/Src/HackPleasanterApi.Client.Api/HackPleasanterApi.Client.Api.csproj
+++ b/Src/HackPleasanterApi.Client.Api/HackPleasanterApi.Client.Api.csproj
@@ -5,12 +5,15 @@
     <Authors>yamada28go</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/yamada28go/HackPleasanterApi.Csharp/</PackageProjectUrl>
-    <PackageVersion>0.0.6</PackageVersion>
+    <PackageVersion>0.0.7</PackageVersion>
     <PackageId>HackPleasanterApi.Csharp</PackageId>
     <PackageLicenseUrl>https://github.com/yamada28go/HackPleasanterApi.Csharp/blob/main/LICENSE</PackageLicenseUrl>
     <Owners>yamada28go</Owners>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
